--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="title_home">Home</string>
     <string name="title_streak">Streak</string>
     <string name="title_progress">Progress</string>
+    <string name="morning_workout">Morning workout</string>
+    <string name="second_workout">Second Workout</string>
+    <string name="did_not_consume_junk_food">Did not consume junk food</string>
+    <string name="consumed_a_gallon_4_liter_of_water">Consumed a gallon/4 liter of water</string>
+    <string name="take_a_progress_picture">Take a progress picture</string>
 </resources>
